# hboyjd-srm

./: .gitignore  README.md  brief.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_init_schema.py  20260423_0002_supplier_onboarding.py  20260423_0003_enum_to_varchar.py  20260424_0004_inquiry_tables.py  20260424_0005_invite_token.py  20260424_0006_supplier_quote.py  20260424_0007_mime_type_128.py  20260424_0008_quote_revision.py  20260424_0009_app_setting.py  20260425_0010_quote_deadline.py  20260428_0011_supplier_excluded.py  20260428_0012_inquiry_item_category.py  20260428_0013_material.py
backend/app/: __init__.py  config.py  constants.py  db.py  deps.py  llm.py  main.py  security.py  seed.py
backend/app/models/: __init__.py  app_setting.py  inquiry.py  material.py  quote.py  supplier.py  user.py
backend/app/routers/: auth.py  inquiries.py  materials.py  public_quote.py  settings.py  suppliers.py
backend/app/schemas/: __init__.py  inquiry.py  material.py  supplier.py  user.py
backend/tests/: conftest.py  test_suppliers.py
web/: bids.html  dashboard.html  index.html  login.html  my-quote.html  profile.html  q.html  quote.html  register.html  shared.css  shared.js
web/admin/: account.html  compare.html  dashboard.html  index.html  inquiries.html  inquiry-detail.html  suppliers.html
